data/all_generated_tests/raw_wast_tests/block_InvalidorInconsistentControlFlowGraph_2454.wast
;; 5. **Test Description**: Include a forward branch within a block that conditionally targets the end of the block depending on a dynamic runtime condition. Implementing it incorrectly initially could cause WebAssembly to skip essential instructions, unlike `wizard_engine`.    - **Constraint Checked**: Accurate forward branch operations.    - **Relation to CFG**: Incorrect forward branching disrupting the CFG by skipping intended execution paths.

(assert_invalid
  (module (func $forward-branch-block (param $cond i32) (result i32)
    (block (result i32)
      (br_if 0 (local.get $cond))
      (i32.const 1)
      (set_local $cond)
    )
    (local.get $cond)
  ))
  "type mismatch"
)